# verified-base64

./: .gitignore  Cargo.toml  DIVERGENCES.md  PLAN_verified-base64.md  PORT.md  README.md  SPEC.md  STATEMENTS.md
.github/workflows/: difftest.yml  verify.yml
docs/: TOOLCHAIN.md
lean/: Verified.lean  lake-manifest.json  lakefile.toml
lean/Verified/: Main.lean  Spec.lean
lean/Verified/Extracted/: Funs.lean  Types.lean
lean/Verified/Spec/: Tests.lean
lean/Verified/Theorems/: Defs.lean  G0.lean  Main.lean  SpecLemmas.lean
prover/: CLAUDE.md  aggregate_costs.py
rust/base64-core/: Cargo.toml
rust/base64-core/src/: lib.rs
rust/base64-core/tests/: fidelity.rs  tables.rs
rust/cratesio-xcheck/: Cargo.toml
rust/diffgen/: Cargo.toml
rust/diffgen/src/: lib.rs
rust/difftest/: Cargo.toml
scripts/: extract.sh  guard.sh  wi_audit.sh
upstream/rust-base64/src/: alphabet.rs
