# Virtual workspace for the verified-base64 project.
#
# - upstream/rust-base64: the upstream `base64` crate, vendored at an exact
#   commit (fork of marshallpierce/rust-base64). Never modified.
# - rust/*: project crates (the verified port, differential test harness).
[workspace]
resolver = "2"
members = [
    "upstream/rust-base64",
    "rust/base64-core",
]

# Hoisted from upstream/rust-base64/Cargo.toml (profiles are workspace-root-only).
[profile.bench]
debug = true

[profile.test]
opt-level = 3
