[package]
name = "base64-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minimal scalar port of the rust-base64 hot path, written in the Aeneas-supported Rust subset. Strict RFC 4648 mode only."
publish = false

[dependencies]

[dev-dependencies]
# Used only by tests to check port fidelity against the vendored upstream crate.
base64 = { path = "../../upstream/rust-base64" }
